--- a/samples/BlazorWebAssembly/wwwroot/index.html
+++ b/samples/BlazorWebAssembly/wwwroot/index.html
@@ -7,10 +7,7 @@
     <title>Blazored Toast (Wasm)</title>
     <base href="/" />
     <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link href="css/site.css" rel="stylesheet" />
 
     <!-- Start Single Page Apps for GitHub Pages -->
