Tailwind build from within Toast project

--- a/samples/BlazorWebAssembly/wwwroot/index.html
+++ b/samples/BlazorWebAssembly/wwwroot/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
-    <title>Blazored Toast (Wasm)</title>
+    <title>Blazor Tailwind Toast (Wasm)</title>
     <base href="/" />
     <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link href="_content/Blazored.Toast/css/app.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 
     <!-- Start Single Page Apps for GitHub Pages -->
