--- a/samples/BlazorWebAssembly/wwwroot/index.html
+++ b/samples/BlazorWebAssembly/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <link href="_content/Blazored.Toast/css/app.min.css" rel="stylesheet" />
+    <link href="_content/BlazorTailwindToast/css/app.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 
     <!-- Start Single Page Apps for GitHub Pages -->
